style-medium.css: Fix bug to left-justify text when site is rendered on small screen and 'who I am' section is in one column

--- a/templated-spatial/css/style-medium.css
+++ b/templated-spatial/css/style-medium.css
@@ -61,7 +61,7 @@
 /* One */
 
 	#one {
-		text-align: center;
+		text-align: left;
 	}
 
 /* Footer */
